# renderize

./: .gitignore  CMakeLists.txt  CMakeSrc.cmake  README.md
ext/SOIL/lib/debug/: SOIL.lib
ext/SOIL/lib/release/: SOIL.lib
ext/assimp-3.1.1/lib/: assimp.lib  assimpd.lib
ext/glew-1.13.0/: .gitignore
ext/glew-1.13.0/lib/Debug/Win32/: glew32sd.lib
ext/glew-1.13.0/lib/Release/Win32/: glew32s.lib
ext/glfw-3.1.1/: .gitignore
shaders/: anaglyph.frag  asis.geom  clock.frag  complex.frag  cube.vert  form.frag  fragment_demo.vert  mondria.frag  normal_show.geom  normal_show.vert  simple.frag  simple.vert  simple_instanced.vert  skybox.frag  skybox.vert  tex_noise.frag  visual.frag  world_mapped.frag
src/: cubes.cpp  cubes.h  fragment_demo.cpp  fragment_demo.h  landscape.cpp  landscape.h  main.cpp  spiral.cpp  spiral.h  universe.cpp  universe.h  visual.cpp  visual.h
src/app/: app.cpp  app.h  scene.cpp  scene.h
src/buffers/: format.h  frame_buffer.cpp  frame_buffer.h  fwd.h  render_buffer.cpp  render_buffer.h  render_target.cpp  render_target.h  texture.cpp  texture.h
src/camera/: camera.cpp  camera.h  camera_updater.cpp  camera_updater.h
src/data/: cube.cpp  cube.h  cycle.h  light.cpp  light.h  mesh.cpp  mesh.h  mesh_sorter.cpp  mesh_sorter.h  model.cpp  model.h  point.cpp  point.h  quad.cpp  quad.h  skybox.cpp  skybox.h  triangle.cpp  triangle.h
src/input/: input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/shaders/: cube.frag  cube.vert  frag_simple.c  fwd.h  lamp.frag  program.cpp  program.h  program_manager.cpp  program_manager.h  shader.cpp  shader.h  simple.vert  uniform.cpp  uniform.h  uniform_block.cpp  uniform_block.h  uniform_buffer.cpp  uniform_buffer.h  vert_simple.c  visual.frag
src/shaders_src/: asis.frag  asis.geom  asis.vert  clock.frag  common.frag  complex.frag  cube.frag  cube.vert  form.frag  fragment_demo.vert  lamp.frag  landscape.frag  mondria.frag  normal_show.frag  normal_show.geom  normal_show.vert  post_kernel3x3.frag  simple.frag  simple.vert  simple_instanced.vert  skybox.vert  spiral.frag  tex_noise.frag  universe.frag  visual.frag  world_mapped.frag  world_mapped.vert
src/shaders_src/render_target/: rt.vert
src/textures/: render_target.cpp  render_target.h  texture.cpp  texture.h
src/util/: cat.cpp  cat.h  checked_call.h  date.cpp  date.h  ref_counter.cpp  ref_counter.h  signal.h  singleton.h  soil_image.cpp  soil_image.h
